[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = [
    "LICENSE",
    "README.md",
    "typed_accessor_lib.py",
]

[project]
name = "typed-accessor-lib"
version = "2.0.0"
authors = [
  { name="eypowxoa", email="nepozitron@gmail.com" },
]
description = "Extract data from JSON with type checking."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/eypowxoa/python-typed-accessor-lib"
Issues = "https://github.com/eypowxoa/python-typed-accessor-lib/issues"
